display logo using img tag

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
             #logo {
                 height: 100px;
                 width: 100px;
-                background: url("robot.svg") no-repeat;
                 float: left;
                 transition: margin 0.5s;
             }
@@ -72,7 +71,7 @@
         <header>
             <div>
                 <a href="https://github.com/android">
-                    <div id="logo"></div>
+                    <img id="logo" src="robot.svg" alt="android robot" />
                     <h1>github.com/android</h1>
                 </a>
                 <p id="tagline">The same Android you know and love, on GitHub.</p>
