redirect to aosp-mirror.github.io

--- a/index.html
+++ b/index.html
@@ -1,122 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Android on GitHub</title>
-        <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-        <style>
-            body {
-                font-family: "Roboto", sans-serif;
-                font-size: 14px;
-                line-height: 1.5;
-                margin: 0;
-            }
-            #content {
-                max-width: 800px;
-                margin: 0 auto;
-                padding: 1em;
-            }
-
-            header {
-                background: #f0f0f0;
-                border-bottom: solid 1px #ccc;
-                overflow: auto;
-                padding: 1em;
-            }
-            header > div {
-                max-width: 800px;
-                margin: 0 auto;
-            }
-            #logo {
-                height: 100px;
-                width: 100px;
-                float: left;
-                transition: margin 0.5s;
-            }
-            @media screen and (min-width: 500px) {
-                #logo { margin: 0 1em; }
-            }
-            h1 {
-                margin: 0;
-                padding-top: 0.5em;
-            }
-            header a, header a:visited {
-                color: #000;
-                text-decoration: none;
-            }
-            header a:hover {
-                color: #A4C639;
-            }
-            #tagline {
-                margin: 0;
-            }
-
-            h2 {
-                clear: both;
-            }
-            a, a:visited, a:hover {
-                color: #A4C639;
-            }
-            a:hover {
-                color: #c8dd88;
-            }
-
-            footer {
-                color: #999;
-                font-size: 80%;
-                margin-top: 2em;
-            }
-        </style>
+      <title>Android on GitHub</title>
+      <meta http-equiv="refresh" content="0;URL='https://aosp-mirror.github.io/'" />
     </head>
     <body>
-        <header>
-            <div>
-                <a href="https://github.com/android">
-                    <img id="logo" src="robot.svg" alt="android robot" />
-                    <h1>github.com/android</h1>
-                </a>
-                <p id="tagline">The same Android you know and love, on GitHub.</p>
-            </div>
-        </header>
-
-        <div id="content">
-            <p>The <a href="https://github.com/android">Android GitHub account</a> provides a
-            read-only mirror of some of the most common repositories from the <a
-                href="http://source.android.com/">Android Open Source Project</a>.  You can view the
-            source code and review the history of the project, just like any other repository on
-            GitHub.  However, because this is a mirror, some things like contributing to the project
-            work a little differently, which we'll talk about below.</p>
-
-            <h2>Submitting bugs and patches</h2>
-
-            <p>Android has specific processes for <a href="http://source.android.com/source/report-bugs.html">reporting bugs</a>
-            and <a href="http://source.android.com/source/submit-patches.html">submitting patches</a>
-            which developers will need to follow in order to contribute.  The Android team does not
-            monitor any issues or pull requests filed against the GitHub mirrors.  Additional
-            information can be found in the <a href="http://source.android.com/source/contributing.html">contributing section</a>
-            of the Android website.</p>
-
-            <h2>Using the repo tool</h2>
-
-            <p>When working with the Android source code, developers use the <a
-                href="http://source.android.com/source/using-repo.html">repo
-                tool</a> to checkout the
-            code from the official git repositories.  Because of differences in how repositories are
-            named, repo will not work with the Android mirror on GitHub.  Several people have published
-            guides on <a href="https://www.google.com/search?q=android+repo+tool+github">using repo
-                with GitHub</a>, but you're on your own there.</p>
-
-            <h2>Best effort</h2>
-
-            <p>Finally, the freshness of the GitHub mirrors are provided on a "best effort" basis
-            (though they're generally less than an hour behind).  Additionally, not all repositories may
-            be mirrored to GitHub.  To see the most up-to-date list of Android repositories, visit
-            <a href="https://android.googlesource.com/">https://android.googlesource.com/</a>.</p>
-
-            <footer>
-                <p>The Android robot is reproduced or modified from work created and shared by
-                Google and used according to terms described in the 
-                <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons 3.0 Attribution License</a>.</p>
-            </footer>
-        </div>
+      <p>This page has moved to <a href="https://aosp-mirror.github.io">aosp-mirror.github.io</a>.</p>
     </body>
 </html>
